changed bat file